--- a/templates/font-icons.html
+++ b/templates/font-icons.html
@@ -6,7 +6,7 @@
 <title>Exam Scores | Pages | Font Icons</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<link href="static" rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,600,700,800" rel="stylesheet"/>
 <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet"/>
 <link rel="stylesheet" href="/static/css/layout.css">
@@ -63,7 +63,7 @@
             </ul>
           </li>
           <li>
-            <a class="drop" href="#">Performance Model</a>
+            <a class="drop" href="#">Performance Models</a>
             <ul>
               <li><a href="/math">Math</a></li>
               <li><a href="/reading">Reading</a></li>
