--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,6 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
     <link
-      href="static"
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
       integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
@@ -78,7 +77,7 @@
                 </ul>
               </li>
               <li>
-                <a class="drop" href="#">Performance Model</a>
+                <a class="drop" href="#">Performance Models</a>
                 <!-- DEPENDING ON HOW WE USE THE MACHINE LEARNING WILL DETERMINE IF WE KEEP THIS AND IF WE WILL NEED TO CREATE MORE HTMLS  -->
                 <ul>
                   <li><a href="/math">Math</a></li>
@@ -128,7 +127,7 @@
         <ul class="nospace group overview btmspace-80">
           <li class="first">
             <article>
-              <div id="bubble" style="font-size: larger;">
+              <div id="bubble" style="font-size: larger">
                 This project is based on data we found on public school
                 students’ test scores across the subjects of math, reading, and
                 writing. With a dataset of 1,000 students recorded, each student
@@ -138,27 +137,25 @@
                 model that can predict each students’ test score depending on
                 the features given. We decided to use Logistic Regression in
                 efforts to most accurately predict the student’s test score for
-                each subject. 
-                <br><br>
-                Under the Visuals/Graphics tab above, you will see
-                an option to view our entire dataset, as well as a Tableau
-                visuals dashboard. Within the data, we discovered the following
-                findings:
-                <br><br>
-                1. The higher a student’s parental education was, the
-                higher test score the student achieved across most subjects.
-                <br>
+                each subject.
+                <br /><br />
+                Under the Visuals/Graphics tab above, you will see an option to
+                view our entire dataset, as well as a Tableau visuals dashboard.
+                Within the data, we discovered the following findings:
+                <br /><br />
+                1. The higher a student’s parental education was, the higher
+                test score the student achieved across most subjects.
+                <br />
                 2. While we do not know which groups represent which
                 ethnicity/race, groups D & E both scored the highest on each
-                subject test scores. 
-                <br>
-                3. Males averaged a higher test score than
-                females across all three subjects, including an almost 15 point
-                gap in math. 
-                <br>
-                4. As expected, students that completed a test
-                preparation class averaged around 10 points or better on all
-                three of their test score than students who did not.
+                subject test scores.
+                <br />
+                3. Males averaged a higher test score than females across all
+                three subjects, including an almost 15 point gap in math.
+                <br />
+                4. As expected, students that completed a test preparation class
+                averaged around 10 points or better on all three of their test
+                score than students who did not.
               </div>
             </article>
           </li>
