--- a/templates/ml_writing.html
+++ b/templates/ml_writing.html
@@ -2,186 +2,213 @@
 
 <html lang="">
 <!-- To declare your language - read more here: https://www.w3.org/International/questions/qa-html-language-declarations -->
+
 <head>
-<title>Exam Scores | Pages | Writing</title>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<link href="static" rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-<link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,600,700,800" rel="stylesheet"/>
-<link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet"/>
-<link rel="stylesheet" href="/static/css/layout.css">
+  <title>Exam Scores | Pages | Writing</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+    integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,600,700,800" rel="stylesheet" />
+  <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet" />
+  <link rel="stylesheet" href="/static/css/layout.css">
 
 
 </head>
+
 <body id="top">
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<!-- Top Background Image Wrapper -->
-<div class="bgded overlay" style="background-image:url('/static/images/demo/backgrounds/01.png');"> 
-  <!-- ################################################################################################ -->
-  <div class="wrapper row0">
-    <div id="topbar" class="hoc clear"> 
-      <!-- ################################################################################################ -->
-      <div class="fl_left"> 
-        <!-- ################################################################################################ -->
-        <ul class="nospace">
-          
-          <li><i class="far fa-envelope"></i> GroupNumberNine</li>
-        </ul>
-        <!-- ################################################################################################ -->
-      </div>
-      <div class="fl_right"> 
-        <!-- ################################################################################################ -->
-        <ul class="nospace">
-          <li><a href="/"><i class="fas fa-home"></i></a></li>
-                
-        </ul>
-        <!-- ################################################################################################ -->
-      </div>
-      <!-- ################################################################################################ -->
-    </div>
-  </div>
   <!-- ################################################################################################ -->
   <!-- ################################################################################################ -->
   <!-- ################################################################################################ -->
-  <div class="wrapper row1">
-    <header id="header" class="hoc clear"> 
-      <!-- ################################################################################################ -->
-      <div id="logo" class="fl_left">
-        <h1><a href="#">Writing Score Prediction</a></h1>
-      </div>
-      <!-- ################################################################################################ -->
-      <nav id="mainav" class="fl_right">
-        <ul class="clear">
-          <li><a href="/">Home</a></li>
-          <li><a class="drop" href="#">Visuals/Graphics</a>
-            <ul>            
-              <li><a href="/full">Data Table</a></li>
-              <li><a href="/side">Dashboard</a></li>
-              <li><a href="/font">Font Icons</a></li>
-
-            </ul>
-          </li>
-          <li class="active">
-            <a class="drop" href="#">Performance Model</a>
-            <!-- DEPENDING ON HOW WE USE THE MACHINE LEARNING WILL DETERMINE IF WE KEEP THIS AND IF WE WILL NEED TO CREATE MORE HTMLS  -->
-            <ul>
-              <li><a href="/math">Math</a></li>
-              <li><a href="/reading">Reading</a></li>
-              <li class="active"><a href="/writing">Writing</a></li>
-            </ul>
-
-          </li>
-        
-         
-        </ul>
-      </nav>
-      <!-- ################################################################################################ -->
-    </header>
-  </div>
-  <!-- ################################################################################################ -->
-  <!-- ################################################################################################ -->
-  <!-- ################################################################################################ -->
- 
+  <!-- Top Background Image Wrapper -->
+  <div class="bgded overlay" style="background-image:url('/static/images/demo/backgrounds/01.png');">
     <!-- ################################################################################################ -->
-   
-    
-    <!-- ################################################################################################ -->
-</div>
-  <!-- ################################################################################################ -->
+    <div class="wrapper row0">
+      <div id="topbar" class="hoc clear">
+        <!-- ################################################################################################ -->
+        <div class="fl_left">
+          <!-- ################################################################################################ -->
+          <ul class="nospace">
 
-<!-- End Top Background Image Wrapper -->
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<div class="wrapper row3">
-  <main class="hoc container clear"> 
-    <!-- main body -->
-    <!-- ################################################################################################ -->
-    <div class="content"> 
-      <!-- ################################################################################################ -->
-        <!-- <h2>Write A Comment</h2>
-        <form action="#" method="post">
-          <div>
-            <label for="name">Name <span>*</span></label>
-            <input type="text" name="name" id="name" value="" size="22" required>
-          </div>
-          <div>
-            <label for="email">Mail <span>*</span></label>
-            <input type="email" name="email" id="email" value="" size="22" required>
-          </div>
-          <div>
-            <label for="url">Website</label>
-            <input type="url" name="url" id="url" value="" size="22">
-          </div>
-          <div>
-            <input type="submit" name="submit" value="Submit Form">
-            &nbsp;
-            <input type="reset" name="reset" value="Reset Form">
-          </div>
-        </form> -->
+            <li><i class="far fa-envelope"></i> GroupNumberNine</li>
+          </ul>
+          <!-- ################################################################################################ -->
+        </div>
+        <div class="fl_right">
+          <!-- ################################################################################################ -->
+          <ul class="nospace">
+            <li><a href="/"><i class="fas fa-home"></i></a></li>
+
+          </ul>
+          <!-- ################################################################################################ -->
+        </div>
+        <!-- ################################################################################################ -->
       </div>
-      <!-- ################################################################################################ -->
     </div>
     <!-- ################################################################################################ -->
-    <!-- / main body -->
-    <div class="clear"></div>
+    <!-- ################################################################################################ -->
+    <!-- ################################################################################################ -->
+    <div class="wrapper row1">
+      <header id="header" class="hoc clear">
+        <!-- ################################################################################################ -->
+        <div id="logo" class="fl_left">
+          <h1><a href="#">Writing Score Model</a></h1>
+        </div>
+        <!-- ################################################################################################ -->
+        <nav id="mainav" class="fl_right">
+          <ul class="clear">
+            <li><a href="/">Home</a></li>
+            <li><a class="drop" href="#">Visuals/Graphics</a>
+              <ul>
+                <li><a href="/full">Data Table</a></li>
+                <li><a href="/side">Dashboard</a></li>
+                <li><a href="/font">Font Icons</a></li>
+
+              </ul>
+            </li>
+            <li class="active">
+              <a class="drop" href="#">Performance Models</a>
+              <!-- DEPENDING ON HOW WE USE THE MACHINE LEARNING WILL DETERMINE IF WE KEEP THIS AND IF WE WILL NEED TO CREATE MORE HTMLS  -->
+              <ul>
+                <li><a href="/math">Math</a></li>
+                <li><a href="/reading">Reading</a></li>
+                <li class="active"><a href="/writing">Writing</a></li>
+              </ul>
+
+            </li>
+
+
+          </ul>
+        </nav>
+        <!-- ################################################################################################ -->
+      </header>
+    </div>
+    <!-- ################################################################################################ -->
+    <!-- ################################################################################################ -->
+    <!-- ################################################################################################ -->
+
+    <!-- ################################################################################################ -->
+
+
+    <!-- ################################################################################################ -->
+  </div>
+  <!-- ################################################################################################ -->
+
+  <!-- End Top Background Image Wrapper -->
+  <!-- ################################################################################################ -->
+  <!-- ################################################################################################ -->
+  <!-- ################################################################################################ -->
+  <div class="wrapper row3">
+    <main class="hoc container clear">
+      <!-- main body -->
+      <!-- ################################################################################################ -->
+      <div>
+        <!-- ################################################################################################ -->
+        <div class="row center">
+
+          <div class="col-md-12">
+            <img src="/static/images/writing_r2.png" alt="Writing Score R2" class="img-responsive"
+              style="width: 250px; height: 50px" />
+            <p>testing</p>
+
+          </div>
+        </div>
+
+        <div>
+
+          <div class="center">
+
+            <li class="one_half first">
+              <article>
+                <!-- <h6 class="heading"><a href="#">Something vs, Something</a></h6> -->
+                <div>
+                  <img src="/static/images/writing_plot.png" alt="Writing Score Plot" class="img-responsive"
+                    style="width: 400px; height: 400px" />
+                </div>
+              </article>
+              <p>hi</p>
+            </li>
+
+          </div>
+
+          <div class="center">
+
+            <li class="one_half">
+              <article>
+                <!-- <h6 class="heading"><a href="#">Something vs, Something</a></h6> -->
+                <div>
+                  <img src="/static/images/writing_importance.png" alt="Writing Score Importance" class="img-responsive"
+                    style="width: 300px; height: 400px" />
+                </div>
+              </article>
+              <p>hi</p>
+            </li>
+
+          </div>
+
+        </div>
+      </div>
+      <!-- ################################################################################################ -->
+  </div>
+  <!-- ################################################################################################ -->
+  <!-- / main body -->
+  <div class="clear"></div>
   </main>
-</div>
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<div class="wrapper row4">
-  <footer id="footer" class="hoc clear"> 
-    
-    <div class="center btmspace-50">
-      <h6 class="heading">GROUPNUMBERNINE</h6>
-      <nav>
-        <ul class="nospace inline pushright uppercase"> </ul>
-      </nav>
-    </div>
-    <!-- ################################################################################################ -->
-    <!-- <hr class="btmspace-50"> -->
-    <!-- ################################################################################################ -->
-    <div class="group">
-      <div class="one_half first">
-        <h6 class="heading">Gruponumbernine</h6>
-        <ul class="nospace btmspace-30 linklist contact">
-          <li><i class="fas fa-map-marker-alt"></i>
-            <address>
-            Street Name &amp; Number, Town, Postcode/Zip
-            </address>
-          </li>
-         
-          <li><i class="far fa-envelope"></i> GroupNumberNine</li>
-        </ul>
-        <ul class="faico clear">
-      
-        </ul>
-      </div>
-    </div>
-    
-  </footer>
-</div>
-
-
-
-<div class="wrapper row5">
-  <div id="copyright" class="hoc clear"> 
-    <p class="fl_left">Copyright &copy; 2021 - All Rights Reserved - <a href="#">www.GroupNumberNine</a></p>
   </div>
-</div>
+  <!-- ################################################################################################ -->
+  <!-- ################################################################################################ -->
+  <!-- ################################################################################################ -->
+  <div class="wrapper row4">
+    <footer id="footer" class="hoc clear">
 
-<a id="backtotop" href="#top"><i class="fas fa-chevron-up"></i></a>
+      <div class="center btmspace-50">
+        <h6 class="heading">GROUPNUMBERNINE</h6>
+        <nav>
+          <ul class="nospace inline pushright uppercase"> </ul>
+        </nav>
+      </div>
+      <!-- ################################################################################################ -->
+      <!-- <hr class="btmspace-50"> -->
+      <!-- ################################################################################################ -->
+      <div class="group">
+        <div class="one_half first">
+          <h6 class="heading">Gruponumbernine</h6>
+          <ul class="nospace btmspace-30 linklist contact">
+            <li><i class="fas fa-map-marker-alt"></i>
+              <address>
+                Street Name &amp; Number, Town, Postcode/Zip
+              </address>
+            </li>
 
-<!-- JAVASCRIPTS -->
+            <li><i class="far fa-envelope"></i> GroupNumberNine</li>
+          </ul>
+          <ul class="faico clear">
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
-<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-<script src="/static/app.js"></script>
-<script src="/static/scripts/jquery.min.js"></script>
-<script src="/static/scripts/jquery.backtotop.js"></script>
-<script src="/static/scripts/jquery.mobilemenu.js"></script>
-</div>
+          </ul>
+        </div>
+      </div>
+
+    </footer>
+  </div>
+
+
+
+  <div class="wrapper row5">
+    <div id="copyright" class="hoc clear">
+      <p class="fl_left">Copyright &copy; 2021 - All Rights Reserved - <a href="#">www.GroupNumberNine</a></p>
+    </div>
+  </div>
+
+  <a id="backtotop" href="#top"><i class="fas fa-chevron-up"></i></a>
+
+  <!-- JAVASCRIPTS -->
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
+  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+  <script src="/static/app.js"></script>
+  <script src="/static/scripts/jquery.min.js"></script>
+  <script src="/static/scripts/jquery.backtotop.js"></script>
+  <script src="/static/scripts/jquery.mobilemenu.js"></script>
+  </div>
+
 </html>
