--- a/templates/ml_writing.html
+++ b/templates/ml_writing.html
@@ -186,9 +186,7 @@
           <h6 class="heading">Gruponumbernine</h6>
           <ul class="nospace btmspace-30 linklist contact">
             <li><i class="fas fa-map-marker-alt"></i>
-              <address>
-                Street Name &amp; Number, Town, Postcode/Zip
-              </address>
+              <address>GA Tech Data Bootcamp 2021</address>
             </li>
 
             <li><i class="far fa-envelope"></i> GroupNumberNine</li>
